--- a/MyClockProject/css/Settings.css
+++ b/MyClockProject/css/Settings.css
@@ -18,7 +18,7 @@
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 25%; /* Could be more or less, depending on screen size */
+  width: 25vw; /* Could be more or less, depending on screen size */
   height: auto;
   color: black;
 }
