--- a/MyClockProject/css/MyClock2.css
+++ b/MyClockProject/css/MyClock2.css
@@ -24,5 +24,21 @@ html {
  background-color: white;
 }
 
+#calendarBTN {
+ background-color: transparent;
+ color: inherit;/* #15F4EE; */
+ text-align: center;
+ display: inline-block;
+ font-size: 1vw;
+ font-weight: 900;
+ border: 2px solid transparent;
+ border-radius: 5px;
+}
+
+#calendarBTN:hover {
+ border: 2px solid black;
+ background-color: white;
+}
+
 #currentTimeFormat {font-size: 1vw;}
 p { margin: 5px; }
