--- a/MyClockProject/css/Settings.css
+++ b/MyClockProject/css/Settings.css
@@ -12,6 +12,19 @@
   background-color: rgba(0,0,0,0); /* Black w/ opacity */
 }
 
+.CalendarModal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  /* overflow: auto; */ /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0); /* Black w/ opacity */
+}
+
 /* Modal Content/Box */
 .modal-content {
   background-color: lightgrey;
