Change Today Color in Calendar and Resize Calendar
Modifications to change the color for Today's date cell in the calendar and make the calendar smaller and more condensed/uniform.

--- a/MyClockProject/css/Settings.css
+++ b/MyClockProject/css/Settings.css
@@ -36,6 +36,16 @@
   color: black;
 }
 
+.CalendarModal-content {
+  background-color: lightgrey;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 10%; /* Could be more or less, depending on screen size */
+  height: auto;
+  color: black;
+}
+
 /* The Close Button */
 .close {
   color: #aaa;
